# Projet3D

./: .gitignore  Avancement.txt  README.md
Engine/: CMakeLists.txt  Engine  clean.sh  editor_layout.json  execute.sh  imgui.ini  main.cpp  recreate.sh  test.txt
Engine/Assets/Primitives/: Box.h  Capsule.h  Cone.h  Cylinder.h  Plane.h  Sphere.h
Engine/Components/: AudioComponent.h  CameraComponent.h  ColliderComponent.h  ControllerComponent.h  InputEvent.h  LayerComponent.h  LightComponent.h  LuaScriptComponent.h  MaterialComponent.h  MeshComponent.h  MyAudioComponent.h  RigidBodyComponent.h  ScriptComponent.h  TagComponent.h  TagConponent.h  TransformComponent.h
Engine/Entities/: Entity.h
Engine/Scripts/: CameraController.h
Engine/Shaders/: computeShader.glsl  fragment_shader.glsl  vertex_shader.glsl
Engine/Systems/: AudioSystem.h  ControllerSystem.h  Dispatcher.h  EditorSystem.h  EntityManager.h  LightSystem.h  PhysicSystem.h  RayTracerSystem.h  RenderSystem.h  SceneManager.h  ScriptSystem.h  TransformSystem.h
Engine/common/: Line.h  Mesh.cpp  Mesh.h  Ray.h
Jeu/: cornelBox.json  scene.json
Jeu/Scripts/: ChangeColor.lua  MoveCam.lua  SunCycle.lua
Jeu/animations/mario/: Idle.dae  Jump.dae  Running.dae  Walking.dae
Jeu/meshes/: 1745249084_Metal_Mario.mtl  LLL.mtl  Mario.mtl  Mario64.mtl  Mario64_Cap.mtl  Metal_Mario.mtl  Peaches_Castle.mtl  PowerStar.mtl  SM64DS_Model.mtl  Shell.mtl  battan_king.mtl  bomb_king.mtl  goomba.mtl  houdai.mtl  koopa_model.mtl  kuribo_model.mtl  peach.mtl  question.mtl  toad.mtl  yoshi2.mtl  yoshi3.mtl
Jeu/textures/: TP1.cpp
RayTracingGPU/: CMakeLists.txt  main.cpp
RayTracingGPU/include/: Mesh.h
include/: Scene.h  Sphere.h  Square.h  Triangle.h
shader/: computeShader.glsl
